# enfield

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
enfield/: __init__.py
enfield/base_entities/: __init__.py  base_entity.py  base_player.py  base_team.py
enfield/entities/: entity.py  player.py
enfield/match/: __init__.py  base_match.py
enfield/messages/: __init__.py  error_messages.py
enfield/settings/: __init__.py  entity_settings.py  meta_settings.py  player_settings.py  rating_settings.py  settings.py
playground/: playground.py
