[project]
name = "enfield"
version = "0.1.0"
description = "Player management and rating calculation library for competitive disciplines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pycountry>=24.6.1",
    "pydantic>=2.12.0",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.11.0",
    "tzdata>=2025.2",
]
